removed event listeners for game buttons unless game is active

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Rock - Paper - Scissors</h1>
     <div class="hide tally" id="tally">
         <div>
-            <h2>You Played</h2>
+            <h2>You</h2>
             <div class="icon" id="playerChoice">
             </div>
         </div>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div>
-            <h2>Computer Played</h2>
+            <h2>Computer</h2>
             <div class="icon" id="computerChoice">
 
             </div>
